[tool.poetry]
name = "pyfan"
version = "0.1.31"
description = ""
authors = ["Fan Wang <wangfanbsg75@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-frontmatter = "^0.5.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
